--- a/tests/emails/basic.html
+++ b/tests/emails/basic.html
@@ -23,7 +23,7 @@ a:hover {
 }
 
 img {
-    border-style: none; 
+    border-style: none;
 }
 
 table {
@@ -102,8 +102,8 @@ blockquote {
    Links
   </h2>
   <p>
-   <a href="https://github.com/yejianye/mdmail">
-    Mdmail on Github
+   <a href="https://github.com/yejianye/nmdmail">
+    nMdmail on Github
    </a>
   </p>
   <h2>
