--- a/tests/emails/basic.html
+++ b/tests/emails/basic.html
@@ -102,7 +102,7 @@ blockquote {
    Links
   </h2>
   <p>
-   <a href="https://github.com/yejianye/nmdmail">
+   <a href="https://github.com/nim65s/nmdmail">
     nMdmail on Github
    </a>
   </p>
