--- a/tests/emails/basic.html
+++ b/tests/emails/basic.html
@@ -28,7 +28,7 @@ img {
 
 table {
     border-spacing: 0;
-    border-collapse:collapse;
+    border-collapse: collapse;
 }
 
 th, td {
@@ -140,10 +140,10 @@ blockquote {
      <th>
       Tables
      </th>
-     <th align="center">
+     <th style="text-align: center;">
       Are
      </th>
-     <th align="right">
+     <th style="text-align: right;">
       Cool
      </th>
     </tr>
@@ -153,10 +153,10 @@ blockquote {
      <td>
       col 3 is
      </td>
-     <td align="center">
+     <td style="text-align: center;">
       right-aligned
      </td>
-     <td align="right">
+     <td style="text-align: right;">
       $1600
      </td>
     </tr>
@@ -164,10 +164,10 @@ blockquote {
      <td>
       col 2 is
      </td>
-     <td align="center">
+     <td style="text-align: center;">
       centered
      </td>
-     <td align="right">
+     <td style="text-align: right;">
       $12
      </td>
     </tr>
@@ -175,10 +175,10 @@ blockquote {
      <td>
       zebra stripes
      </td>
-     <td align="center">
+     <td style="text-align: center;">
       are neat
      </td>
-     <td align="right">
+     <td style="text-align: right;">
       $1
      </td>
     </tr>
